[package]
name = "dioxus_tw_components_docsite"
version = "0.1.0"
edition = "2021"
authors = ["Louis Truchelut", "kbz_8", "Ziale"]

[dependencies]
dioxus = { version = "0.6.3", features = ["web", "router"] }
#dioxus-tw-components = { version = "0.1.1", features = ["theme"] }
dioxus-tw-components = { path="../dioxus-components", features = ["theme"] }
chrono = "0.4.39"

[workspace]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
